bug: align icon font to center of button

--- a/@utahdts/utah-design-system/css/6-components/base-components/buttons/_button.scss
+++ b/@utahdts/utah-design-system/css/6-components/base-components/buttons/_button.scss
@@ -88,6 +88,7 @@
       [class*='utds-icon-after-']::after,
       [class*='utds-icon-before-']::before {
         font-size: .9em;
+        line-height: 0;
       }
     }
     &--icon-left {
